Add -XX:+PrintGCDateStamps when using GC Logs
Now that Elasticsearch requires Java 7 or later, it's safe to add -XX:+PrintGCDateStamps to get human readable times alongside JVM times.